themes/vantage/tags/1.0.4/README.md
Vantage Theme
---------------
Vantage is a multipurpose WordPress theme, based on _s with integration into SiteOrigin's extras framework.


License
---------------
This theme, like WordPress, is licensed under the GPL 2.0. Use it to make something cool, have fun, and share what you've learned with others. The premium version of this theme is also licensed under the same GPL 2.0 license.

All Javascript is located in /js/ with license headers where appropriate.

All demo photographs have been sourced from Pixabay and are licensed under the public domain.

This theme is originally based on Underscores (_s) starter theme http://underscores.me/


SiteOrigin Extras
---------------
This theme is built around the SiteOrigin extras framework contained in the folder extras/. All code is licensed under GPL 2.0 and copyright Greg Priday unless otherwise stated in the file header.


Bundled Resources
---------------
* FontAwesome by Dave Gandy licensed under SIL OFL 1.1 <http://scripts.sil.org/OFL>


Change Log
---------------

**1.0**
Initial release.

**1.0.1**
A few minor bug fixes and updates.

**1.0.2**
Fixed issue with Meta Slider integration.
Added more hooks and filters to logo.
HTML code clean up.
Framework updates.

**1.0.3**
Set background color for CSS footer.
Added circle icon post loop.
Added options to circle icon widget.
Added some more WooCommerce styles.
Various bug fixes.
Additional theme settings.

**1.0.4**
Added retina icons.
Created spritemaps.
Various fixes and improvements.
Fixes some CSS issues that resulted from broken build process.